--- a/index.html
+++ b/index.html
@@ -2,21 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>code-whisperer-gh</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="code-whisperer-gh" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <title>WyniesiemyTo.pl - Profesjonalne przeprowadzki i transport w Żorach</title>
+    <meta name="description" content="Profesjonalne usługi przeprowadzkowe, transport i wywóz w Żorach i okolicy. Szybko, uczciwie i w dobrej cenie. Zadzwoń: 531 124 500" />
+    <meta name="keywords" content="przeprowadzki Żory, transport Żory, wynoszenie mebli, wywóz śmieci PSZOK, przeprowadzki Rybnik, transport Jastrzębie" />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
