--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WyniesiemyTo.pl</title>
+    <title>WyniesiemyTo</title>
     <meta name="description" content="Profesjonalne usługi przeprowadzkowe, transport i wywóz w Żorach i okolicy. Szybko, uczciwie i w dobrej cenie. Zadzwoń: 531 124 500" />
     <meta name="keywords" content="przeprowadzki Żory, transport Żory, wynoszenie mebli, wywóz śmieci PSZOK, przeprowadzki Rybnik, transport Jastrzębie" />
   </head>
