--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <div id="root"></div>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LceusorAAAAAEJsv6s4uTVSXmBj-XnpTMRfr8qP"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
