--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta http-equiv="Content-Security-Policy" content="
+    script-src 'self' 'unsafe-inline' maps.googleapis.com *.googleapis.com;
+    connect-src 'self' *.googleapis.com *.google.com *.gstatic.com;
+    img-src 'self' data: maps.gstatic.com *.googleapis.com *.ggpht.com *.google.com *.googleusercontent.com;
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+    font-src https://fonts.gstatic.com;
+    frame-src *.google.com;
+    worker-src blob:;">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WyniesiemyTo</title>
