--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  script-src 'self' 'unsafe-inline' https://www.google.com/recaptcha/ https://www.gstatic.com/recaptcha/;
+  frame-src 'self' https://www.google.com/recaptcha/ https://recaptcha.google.com/recaptcha/;
+  connect-src 'self' https://www.google.com/recaptcha/ https://puknkvmgocmjgcgjynda.supabase.co;
+  img-src 'self' data: https://www.gstatic.com/recaptcha/;
+  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+  font-src 'self' https://fonts.gstatic.com;">
   </head>
 
   <body>
