--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta http-equiv="Content-Security-Policy" content="
-    script-src 'self' 'unsafe-inline' maps.googleapis.com *.googleapis.com;
-    connect-src 'self' *.googleapis.com *.google.com *.gstatic.com;
-    img-src 'self' data: maps.gstatic.com *.googleapis.com *.ggpht.com *.google.com *.googleusercontent.com;
-    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-    font-src https://fonts.gstatic.com;
-    frame-src *.google.com;
-    worker-src blob:;">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WyniesiemyTo</title>
     <meta name="description" content="Lovable Generated Project" />
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://maps.googleapis.com *.googleapis.com; frame-src 'self' https://www.google.com https://recaptcha.google.com https://www.google.com/recaptcha/; connect-src 'self' https://*.supabase.co; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com;"/>
     <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="code-whisperer-gh" />
@@ -23,20 +16,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <meta http-equiv="Content-Security-Policy" content="
-  default-src 'self';
-  script-src 'self' 'unsafe-inline' https://www.google.com/recaptcha/ https://www.gstatic.com/recaptcha/;
-  frame-src 'self' https://www.google.com/recaptcha/ https://recaptcha.google.com/recaptcha/;
-  connect-src 'self' https://www.google.com/recaptcha/ https://puknkvmgocmjgcgjynda.supabase.co;
-  img-src 'self' data: https://www.gstatic.com/recaptcha/;
-  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-  font-src 'self' https://fonts.gstatic.com;">
   </head>
 
   <body>
     <div id="root"></div>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
