--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>WyniesiemyTo</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.google.com https://www.gstatic.com https://maps.googleapis.com https://*.googleapis.com https://www.recaptcha.net; script-src-elem 'self' 'unsafe-inline' 'unsafe-eval' https://www.google.com https://www.gstatic.com https://maps.googleapis.com https://*.googleapis.com https://www.recaptcha.net; connect-src 'self' https://*.supabase.co https://www.google.com https://www.gstatic.com https://www.recaptcha.net https://*.google.com https://*.gstatic.com https://maps.googleapis.com; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; frame-src 'self' https://www.google.com https://recaptcha.google.com https://www.google.com/recaptcha/ https://www.recaptcha.net;"/>
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="WyniesiemyTo" />
 
     <meta property="og:title" content="WyniesiemyTo" />
     <meta property="og:description" content="WyniesiemyTo" />
@@ -16,6 +16,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
   </head>
 
   <body>
