--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.ico" />
 <link rel="apple-touch-icon" sizes="128x128" href="/favicon-128x128.ico" />
 <meta name="msapplication-TileImage" content="/favicon-256x256.ico" />
+<link rel="manifest" href="/manifest.json">
+
   </head>
 
   <body>
