--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="WyniesiemyTo" />
     <meta name="twitter:image" content="/logo.png" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.ico" />
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.ico" />
-<link rel="apple-touch-icon" sizes="128x128" href="/favicon-128x128.ico" />
-<meta name="msapplication-TileImage" content="/favicon-256x256.ico" />
-<link rel="manifest" href="/manifest.json">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/x-icon" sizes="16x16" href="/favicon-16x16.ico" />
+  <link rel="icon" type="image/x-icon" sizes="32x32" href="/favicon-32x32.ico" />
+  <link rel="apple-touch-icon" sizes="128x128" href="/favicon-128x128.ico" />
+  <link rel="manifest" href="/manifest.json" />
 
   </head>
 
