--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WyniesiemyTo</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <meta name="description" content="Profesjonalne usługi przeprowadzkowe, transport i wywóz na Śląsku. Szybko, uczciwie i w dobrej cenie." />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.google.com https://www.gstatic.com https://maps.googleapis.com https://*.googleapis.com https://www.recaptcha.net; script-src-elem 'self' 'unsafe-inline' 'unsafe-eval' https://www.google.com https://www.gstatic.com https://maps.googleapis.com https://*.googleapis.com https://www.recaptcha.net; connect-src 'self' https://*.supabase.co https://www.google.com https://www.gstatic.com https://www.recaptcha.net https://*.google.com https://*.gstatic.com https://maps.googleapis.com; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; frame-src 'self' https://www.google.com https://recaptcha.google.com https://www.google.com/recaptcha/ https://www.recaptcha.net;"/>
     <meta name="author" content="WyniesiemyTo" />
 
-    <meta property="og:title" content="WyniesiemyTo" />
-    <meta property="og:description" content="WyniesiemyTo" />
+    <meta property="og:title" content="WyniesiemyTo - Profesjonalne przeprowadzki i wywóz odpadów" />
+    <meta property="og:description" content="Wynosimy Twoje problemy! Szybko i profesjonalnie na całym Śląsku!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="https://wyniesiemyto.pl/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="WyniesiemyTo" />
-    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:image" content="https://wyniesiemyto.pl/logo.png" />
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="icon" type="image/x-icon" sizes="16x16" href="/favicon-16x16.ico" />
   <link rel="icon" type="image/x-icon" sizes="32x32" href="/favicon-32x32.ico" />
