--- a/index.html
+++ b/index.html
@@ -27,19 +27,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager --> 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FTGVP3M4HQ"></script>
-  <script>
+<script>
   window.dataLayer = window.dataLayer || [];
-  function gtag() { dataLayer.push(arguments); }
-  gtag('consent', 'default', {
-    'ad_user_data': 'denied',
-    'ad_personalization': 'denied',
-    'ad_storage': 'denied',
-    'analytics_storage': 'denied',
-    'wait_for_update': 500,
-  });
+  function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
+  
   gtag('config', 'G-FTGVP3M4HQ');
-  </script>
+  gtag('config', 'AW-17607352178'); // <-- DODAJ TĘ LINIĘ
+</script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WyniesiemyTo</title>
