--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Event snippet for Przesłanie formularza kontaktowego conversion page
-In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+   <!-- Event snippet for Przesłanie formularza kontaktowego conversion page -->
 <script>
 function gtag_report_conversion(url) {
   var callback = function () {
