--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WyniesiemyTo</title>
-    <meta name="description" content="Profesjonalne usługi przeprowadzkowe, transport i wywóz na Śląsku. Szybko, uczciwie i w dobrej cenie." />
+    <title>WyniesiemyTo - Przeprowadzki, wywóz śmieci, opróżnianie mieszkań Żory</title>
+    <meta name="description" content="Profesjonalne przeprowadzki, wywóz śmieci do PSZOK, opróżnianie mieszkań i piwnic w Żorach, Jastrzębiu-Zdroju i okolicy. Szybko i uczciwie!" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.google.com https://www.gstatic.com https://maps.googleapis.com https://*.googleapis.com https://www.recaptcha.net; script-src-elem 'self' 'unsafe-inline' 'unsafe-eval' https://www.google.com https://www.gstatic.com https://maps.googleapis.com https://*.googleapis.com https://www.recaptcha.net; connect-src 'self' https://*.supabase.co https://www.google.com https://www.gstatic.com https://www.recaptcha.net https://*.google.com https://*.gstatic.com https://maps.googleapis.com; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; frame-src 'self' https://www.google.com https://recaptcha.google.com https://www.google.com/recaptcha/ https://www.recaptcha.net;"/>
     <meta name="author" content="WyniesiemyTo" />
 
@@ -49,11 +49,54 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="WyniesiemyTo" />
     <meta name="twitter:image" content="https://wyniesiemyto.pl/logo.png" />
+
+    <meta name="geo.region" content="PL-SL" />
+    <meta name="geo.placename" content="Żory" />
+    <meta name="geo.position" content="50.0472;18.6867" />
+    <meta name="ICBM" content="50.0472, 18.6867" />
+
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="icon" type="image/x-icon" sizes="16x16" href="/favicon-16x16.ico" />
   <link rel="icon" type="image/x-icon" sizes="32x32" href="/favicon-32x32.ico" />
   <link rel="apple-touch-icon" sizes="128x128" href="/favicon-128x128.ico" />
   <link rel="manifest" href="/manifest.json" />
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MovingCompany",
+  "name": "WyniesiemyTo",
+  "description": "Profesjonalne usługi przeprowadzkowe, transport i wywóz w Żorach i okolicy",
+  "url": "https://wyniesiemyto.pl",
+  "telephone": ["+48504729105", "+48798598993"],
+  "email": "wyniesiemyto@gmail.com",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Żory",
+    "addressRegion": "Śląskie",
+    "addressCountry": "PL"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 50.0472,
+    "longitude": 18.6867
+  },
+  "areaServed": [
+    "Żory", "Jastrzębie-Zdrój", "Rybnik", "Wodzisław Śląski", "Racibórz"
+  ],
+  "serviceType": [
+    "Przeprowadzki mieszkaniowe",
+    "Opróżnianie mieszkań",
+    "Wywóz śmieci do PSZOK",
+    "Transport mebli",
+    "Wynoszenie AGD"
+  ],
+  "founder": [
+    {"@type": "Person", "name": "Kacper Zagermann"},
+    {"@type": "Person", "name": "Patryk Sylwerski"}
+  ]
+}
+</script>
 
   </head>
 
