--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link rel="icon" type="image/x-icon" sizes="32x32" href="/favicon-32x32.ico" />
   <link rel="apple-touch-icon" sizes="128x128" href="/favicon-128x128.ico" />
   <link rel="manifest" href="/manifest.json" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="modulepreload" href="/src/main.tsx">
+  <link rel="preload" href="/logo.webp" as="image" type="image/webp">
+  <link rel="dns-prefetch" href="//www.googletagmanager.com">
+  <link rel="dns-prefetch" href="//puknkvmgocmjgcgjynda.supabase.co">
 
   <script type="application/ld+json">
 {
