--- a/index.html
+++ b/index.html
@@ -3,39 +3,18 @@
   <head>
 
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-PRW3QKC4');</script>
+<script>
+  (function(w,d,s,l,i){
+    w[l]=w[l]||[];
+    w[l].push({'gtm.start': new Date().getTime(), event:'gtm.js'});
+    var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s), dl=l!='dataLayer'? '&l='+l: '';
+    j.async=true;
+    j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;
+    f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-PRW3QKC4');
+</script>
 <!-- End Google Tag Manager --> 
- <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FTGVP3M4HQ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    // Analytics
-    gtag('config', 'G-FTGVP3M4HQ');
-    // Ads conversion
-    gtag('config', 'AW-17607352178');
-  </script>
-   <!-- Event snippet for Przesłanie formularza kontaktowego -->
-  <script>
-    function gtag_report_conversion(url) {
-      var callback = function () {
-        if (typeof url !== 'undefined') {
-          window.location = url;
-        }
-      };
-      gtag('event', 'conversion', {
-        'send_to': 'AW-17607352178/2OAlCN6PgqYbEPK-68tB',
-        'event_callback': callback
-      });
-      return false;
-    }
-  </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WyniesiemyTo - Przeprowadzki, wywóz śmieci, opróżnianie mieszkań Żory</title>
