--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
 
-    <!-- Google Tag Manager -->
+<!-- Google Tag Manager -->
 <script>
   (function(w,d,s,l,i){
     w[l]=w[l]||[];
     w[l].push({'gtm.start': new Date().getTime(), event:'gtm.js'});
     var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s), dl=l!='dataLayer'? '&l='+l: '';
+        j=d.createElement(s), dl=l!='dataLayer'? '&l='+l : '';
     j.async=true;
-    j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;
+    j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
     f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-PRW3QKC4');
 </script>
-<!-- End Google Tag Manager --> 
+<!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WyniesiemyTo - Przeprowadzki, wywóz śmieci, opróżnianie mieszkań Żory</title>
@@ -88,9 +88,12 @@
   </head>
 
   <body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PRW3QKC4"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PRW3QKC4"
+          height="0" width="0" style="display:none;visibility:hidden">
+  </iframe>
+</noscript>
 <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
