--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
   })(window,document,'script','dataLayer','GTM-PRW3QKC4');
 </script>
 <!-- End Google Tag Manager -->
+ <script>
+  function gtag_report_conversion(url) {
+    var callback = function() {
+      if (typeof url !== 'undefined') { window.location = url; }
+    };
+    gtag('event', 'conversion', {
+      'send_to': 'AW-17607352178/2OAlCN6PgqYbEPK-68tB',
+      'event_callback': callback
+    });
+    return false;
+  }
+</script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WyniesiemyTo - Przeprowadzki, wywóz śmieci, opróżnianie mieszkań Żory</title>
