--- a/index.html
+++ b/index.html
@@ -31,7 +31,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WyniesiemyTo - Przeprowadzki, wywóz śmieci, opróżnianie mieszkań Żory</title>
     <meta name="description" content="Profesjonalne przeprowadzki, wywóz śmieci do PSZOK, opróżnianie mieszkań i piwnic w Żorach, Jastrzębiu-Zdroju i okolicy. Szybko i uczciwie!" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.google.com https://www.gstatic.com https://maps.googleapis.com https://*.googleapis.com https://www.recaptcha.net; script-src-elem 'self' 'unsafe-inline' 'unsafe-eval' https://www.google.com https://www.gstatic.com https://maps.googleapis.com https://*.googleapis.com https://www.recaptcha.net; connect-src 'self' https://*.supabase.co https://www.google.com https://www.gstatic.com https://www.recaptcha.net https://*.google.com https://*.gstatic.com https://maps.googleapis.com; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; frame-src 'self' https://www.google.com https://recaptcha.google.com https://www.google.com/recaptcha/ https://www.recaptcha.net;"/>
+    <meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  base-uri 'self';
+  script-src 'self' 'unsafe-inline' 'unsafe-eval'
+    https://www.googletagmanager.com
+    https://www.google-analytics.com
+    https://www.google.com
+    https://www.gstatic.com
+    https://maps.googleapis.com
+    https://*.googleapis.com
+    https://www.recaptcha.net;
+  script-src-elem 'self' 'unsafe-inline' 'unsafe-eval'
+    https://www.googletagmanager.com
+    https://www.google-analytics.com
+    https://www.google.com
+    https://www.gstatic.com
+    https://maps.googleapis.com
+    https://*.googleapis.com
+    https://www.recaptcha.net;
+  connect-src 'self'
+    https://*.supabase.co
+    https://www.google.com
+    https://www.gstatic.com
+    https://www.recaptcha.net
+    https://*.google.com
+    https://*.gstatic.com
+    https://maps.googleapis.com;
+  img-src 'self' data: https:;
+  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+  font-src 'self' https://fonts.gstatic.com;
+  frame-src 'self'
+    https://www.googletagmanager.com
+    https://www.google.com
+    https://recaptcha.google.com
+    https://www.recaptcha.net';
+"/>
     <meta name="author" content="WyniesiemyTo" />
 
     <meta property="og:title" content="WyniesiemyTo - Profesjonalne przeprowadzki i wywóz odpadów" />
