--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WyniesiemyTo - Przeprowadzki, wywóz śmieci, opróżnianie mieszkań Żory</title>
     <meta name="description" content="Profesjonalne przeprowadzki, wywóz śmieci do PSZOK, opróżnianie mieszkań i piwnic w Żorach, Jastrzębiu-Zdroju i okolicy. Szybko i uczciwie!" />
-    <meta http-equiv="Content-Security-Policy" content="
+<meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
   base-uri 'self';
-  script-src 'self' 'unsafe-inline' 'unsafe-eval'
+  script-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob:
     https://www.googletagmanager.com
     https://www.google-analytics.com
     https://www.google.com
     https://www.gstatic.com
     https://maps.googleapis.com
     https://*.googleapis.com;
-  script-src-elem 'self' 'unsafe-inline' 'unsafe-eval'
+  script-src-elem 'self' 'unsafe-inline' 'unsafe-eval' data: blob:
     https://www.googletagmanager.com
     https://www.google-analytics.com
     https://www.google.com
