--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
     https://recaptcha.google.com
     https://www.google.com/recaptcha/;
 "/>
+<!-- Załaduj gtag.js dla Google Ads Conversion -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17607352178"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){ dataLayer.push(arguments); }
+  gtag('js', new Date());
+  gtag('config', 'AW-17607352178');
+</script>
     <meta name="author" content="WyniesiemyTo" />
 
     <meta property="og:title" content="WyniesiemyTo - Profesjonalne przeprowadzki i wywóz odpadów" />
