--- a/index.html
+++ b/index.html
@@ -118,5 +118,6 @@
 <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
